// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Suspensions Component should render component with link to remove suspension but not add a new one. 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <h2
          class="govuk-heading-s"
        >
          Case Currently Suspended
        </h2>
        <p
          class="govuk-body"
        >
          Date current suspension applied: 
          02/04/2022
          .
        </p>
        <a
          class="govuk-body govuk-link"
          href="/case/some_case_id/stage/some_stage_id/caseAction/suspension/remove/b4f686e9-d052-4e0d-8c1b-ab024791e01f?hideSidebar=true&activeTab=CASE_ACTIONS"
        >
          Remove the current suspension
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Case Currently Suspended
      </h2>
      <p
        class="govuk-body"
      >
        Date current suspension applied: 
        02/04/2022
        .
      </p>
      <a
        class="govuk-body govuk-link"
        href="/case/some_case_id/stage/some_stage_id/caseAction/suspension/remove/b4f686e9-d052-4e0d-8c1b-ab024791e01f?hideSidebar=true&activeTab=CASE_ACTIONS"
      >
        Remove the current suspension
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Suspensions Component should render component with link to remove suspension but not add a new one. And show historic 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <h2
          class="govuk-heading-s"
        >
          Case Currently Suspended
        </h2>
        <p
          class="govuk-body"
        >
          Date current suspension applied: 
          02/04/2022
          .
        </p>
        <a
          class="govuk-body govuk-link"
          href="/case/some_case_id/stage/some_stage_id/caseAction/suspension/remove/b4f686e9-d052-4e0d-8c1b-ab024791e01f?hideSidebar=true&activeTab=CASE_ACTIONS"
        >
          Remove the current suspension
        </a>
        <h3
          class="govuk-heading-s"
        >
          Case Suspension History
        </h3>
        <p
          class="govuk-body full-width"
        >
          This case has previously been suspended 
          1
           time
          .
        </p>
        <p
          class="govuk-body"
        >
          From: 
          19/04/2022
          , until: 
          19/04/2022
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Case Currently Suspended
      </h2>
      <p
        class="govuk-body"
      >
        Date current suspension applied: 
        02/04/2022
        .
      </p>
      <a
        class="govuk-body govuk-link"
        href="/case/some_case_id/stage/some_stage_id/caseAction/suspension/remove/b4f686e9-d052-4e0d-8c1b-ab024791e01f?hideSidebar=true&activeTab=CASE_ACTIONS"
      >
        Remove the current suspension
      </a>
      <h3
        class="govuk-heading-s"
      >
        Case Suspension History
      </h3>
      <p
        class="govuk-body full-width"
      >
        This case has previously been suspended 
        1
         time
        .
      </p>
      <p
        class="govuk-body"
      >
        From: 
        19/04/2022
        , until: 
        19/04/2022
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Suspensions Component should render component with link to submit suspension 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <h3
          class="govuk-heading-s"
        >
          Suspend Case
        </h3>
        <a
          class="govuk-body govuk-link"
          href="/case/some_case_id/stage/some_stage_id/caseAction/suspension/add"
        >
          Suspend this case
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <h3
        class="govuk-heading-s"
      >
        Suspend Case
      </h3>
      <a
        class="govuk-body govuk-link"
        href="/case/some_case_id/stage/some_stage_id/caseAction/suspension/add"
      >
        Suspend this case
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Suspensions Component should render component with link to submit suspension and historic suspension 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <h3
          class="govuk-heading-s"
        >
          Suspend Case
        </h3>
        <a
          class="govuk-body govuk-link"
          href="/case/some_case_id/stage/some_stage_id/caseAction/suspension/add"
        >
          Suspend this case
        </a>
        <h3
          class="govuk-heading-s"
        >
          Case Suspension History
        </h3>
        <p
          class="govuk-body full-width"
        >
          This case has previously been suspended 
          1
           time
          .
        </p>
        <p
          class="govuk-body"
        >
          From: 
          02/04/2022
          , until: 
          10/04/2022
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <h3
        class="govuk-heading-s"
      >
        Suspend Case
      </h3>
      <a
        class="govuk-body govuk-link"
        href="/case/some_case_id/stage/some_stage_id/caseAction/suspension/add"
      >
        Suspend this case
      </a>
      <h3
        class="govuk-heading-s"
      >
        Case Suspension History
      </h3>
      <p
        class="govuk-body full-width"
      >
        This case has previously been suspended 
        1
         time
        .
      </p>
      <p
        class="govuk-body"
      >
        From: 
        02/04/2022
        , until: 
        10/04/2022
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
